--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./wrr/site-plan-rafting.html">link to site plan</a>
+    <a href="./wrr/styles/index.html">Link to wireframe</a>
 </body>
 </html>
