--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./wrr/styles/index.html">Link to wireframe</a>
+    <link rel="stylesheet" href="./wrr/styles/index.html">
 </body>
 </html>
