--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./wrr/styles/index.html">Link to wireframe</a>
-    <link rel="stylesheet" href="./wrr/styles/index.html">
+    <a href="./wrr/index.html">Link to wireframe</a>
+    <link rel="stylesheet" href="./wrr/index.html">
 </body>
 </html>
