--- a/wrr/index.html
+++ b/wrr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <a id="logo_link" href="index.html">
-        <img class="logo" src="image/dryoarlogo.png" alt="Logo">
+        <img class="logo" src="images/dryoarlogo.png" alt="Logo">
     </a>
     <nav>
         <a href="index.html">Home</a>
