--- a/class work/PresNels.html
+++ b/class work/PresNels.html
@@ -17,7 +17,7 @@
     <p>2. Repentance</p>
     <p>3. Baptism by immersion for the remission of sins</p>
     <p>4. Laying on of hands fro the gift of the Holy Ghost</p>
-    <img src="https://byui-wdd.github.io/wdd130/images/w04/w04_ice_img.png" alt="President Nelson">
+    <img src="https://assets.churchofjesuschrist.org/0b/20/0b20c4b9196aa3bfd76b4d682dc89ae21dc8b321/russell_nelson_official_portrait_2018.jpeg" alt="President Nelson" width="250px" height="300px">
 
     
 </body>
