--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./wrr/index.html">Link to wireframe html</a>
+    <a href="./wrr/index.html">Link to updated wireframe html</a>
 
 </body>
 </html>
