--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="./wrr/index.html">Link to updated pagesite</a>
     <a href="./wrr/index.html">link to updated wireframe</a>
+     <a href="./positioning/positioning.html">postioning html</a>
 </body>
 </html>
