--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <a href="./wrr/index.html">link to updated wireframe</a>
      <a href="./positioning/positioning.html">postioning html</a>
+     <link rel="stylesheet" href="./positioning/positioning.html">
+     <a href="./positioning/positioning.html">positiong html</a>
 </body>
 </html>
