--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
      <a href="./positioning/positioning.html">postioning html</a>
      <link rel="stylesheet" href="./positioning/positioning.html">
      <a href="./positioning/positioning.html">positiong html</a>
+     <a href="./rane&rowe/site-plan.html"></a>
 </body>
 </html>
