trying to add Rand R

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
      <link rel="stylesheet" href="./positioning/positioning.html">
      <a href="./positioning/positioning.html">positiong html</a>
      <a href="./rane&rowe/site-plan.html">rane and rowe</a>
+     <a href="./rane&rowe/site-plan.html">Rane and Rowe Site plan</a>
 </body>
 </html>
